--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -335,3 +335,9 @@ body[data-background-color="dark"] .demo-icon .icon-class {
     background-color: #f1f1f1;
   }
 
+  .baptis{
+	background-image: url('../../main/images/surat/baptis.jpg');
+	background-repeat: no-repeat, repeat;
+	background-position: center;
+	background-color: #0bf;
+  }
